--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <header class="header js-float-menu">
-        <h1 class="title">Responsive Design</h1>
+      <header class="l-header js-float-menu">
+        <h1 class="c-title">Responsive Design</h1>
 
-        <div class="menu-trigger js-toggle-sp-menu">
-          <span></span>
-          <span></span>
-          <span></span>
+        <div class="p-menu--trigger js-toggle-sp-menu">
+          <span class="p-menu--trigger--span c-spMenu"></span>
+          <span class="p-menu--trigger--span c-spMenu"></span>
+          <span class="p-menu--trigger--span c-spMenu"></span>
         </div>
-        <nav class="nav-menu js-toggle-sp-menu-target">
-          <ul class="menu">
-            <li class="menu-item"><a class="menu-link" href="">TOP</a></li>
-            <li class="menu-item"><a class="menu-link" href="#news">NEWS</a></li>
-            <li class="menu-item"><a class="menu-link" href="#about">ABOUT</a></li>
-            <li class="menu-item"><a class="menu-link" href="#staff">STAFF</a></li>
-            <li class="menu-item"><a class="menu-link" href="#cource">COURCE</a></li>
-            <li class="menu-item"><a class="menu-link" href="#contact">CONTACT</a></li>
+        <nav class="p-nav__menu js-toggle-sp-menu-target">
+          <ul class="p-menu">
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="">TOP</a></li>
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#news">NEWS</a></li>
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#about">ABOUT</a></li>
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#staff">STAFF</a></li>
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#cource">COURCE</a></li>
+            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#contact">CONTACT</a></li>
           </ul>
         </nav>
       </header>
