--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <link type="text/css" rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="container-fluid">
+<div class="l-container-fluid">
   <div class="row">
     <div class="col">
-      <header class="l-header js-float-menu">
-        <h1 class="c-title">Responsive Design</h1>
+      <header class="p-header js-float-menu">
+        <h1 class="p-header__title c-headerTitle">Responsive Design</h1>
 
-        <div class="p-menu--trigger js-toggle-sp-menu">
-          <span class="p-menu--trigger--span c-spMenu"></span>
-          <span class="p-menu--trigger--span c-spMenu"></span>
-          <span class="p-menu--trigger--span c-spMenu"></span>
+        <div class="p-header__menuTrigger js-toggle-sp-menu">
+          <span class="p-header__menuTrigger--span c-spMenu"></span>
+          <span class="p-header__menuTrigger--span c-spMenu"></span>
+          <span class="p-header__menuTrigger--span c-spMenu"></span>
         </div>
-        <nav class="p-nav__menu js-toggle-sp-menu-target">
-          <ul class="p-menu">
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="">TOP</a></li>
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#news">NEWS</a></li>
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#about">ABOUT</a></li>
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#staff">STAFF</a></li>
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#cource">COURCE</a></li>
-            <li class="p-menu__item c-menuItem"><a class="p-menu--link c-menuLink" href="#contact">CONTACT</a></li>
+        <nav class="p-header__navMenu js-toggle-sp-menu-target">
+          <ul class="p-header__menu">
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="">TOP</a></li>
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="#news">NEWS</a></li>
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="#about">ABOUT</a></li>
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="#staff">STAFF</a></li>
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="#cource">COURCE</a></li>
+            <li class="p-header__menu--item c-menuItem"><a class="p-header__menu--link c-menuLink" href="#contact">CONTACT</a></li>
           </ul>
         </nav>
       </header>
