--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
   </div>
 </div>
-<main>
-  <section class="hero container-fluid js-float-menu-target">
-    <h2 class="hero-title">Responsive Design<br> is so good.</h2>
+<main class="l-main">
+  <section class="p-hero container-fluid js-float-menu-target">
+    <h2 class="p-hero__title">Responsive Design<br> is so good.</h2>
   </section>
 
 
