--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 
   <!--bgColor-lightGrayはここにつける-->
-  <section class="bgColor-lightGray" id="about">
-    <div class="container section-top">
+  <section class="bgColor-lightGray" id="l-about">
+    <div class="container c-sectionTop">
       <div class="row">
         <div class="col">
-          <h2 class="section-top-title"><span>ABOUT</span></h2>
+          <h2 class="c-sectionTop__title"><span>ABOUT</span></h2>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-  <section class="container section-top section-top-ornament" id="staff">
+  <section class="container  section-top-ornament" id="staff">
     <div class="row">
       <div class="col">
         <h2 class="section-top-title"><span>STAFF</span></h2>
