--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-  <section class="container  section-top-ornament" id="staff">
+  <section class="container  section-top-ornament" id="l-staff">
     <div class="row">
       <div class="col">
         <h2 class="section-top-title"><span>STAFF</span></h2>
