--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <!--bgColor-lightGrayはここにつける-->
-  <section class="bgColor-lightGray" id="l-about">
+  <section class="p-bgColor__lightGray" id="l-about">
     <div class="container c-sectionTop">
       <div class="row">
         <div class="col">
@@ -61,10 +61,10 @@
     </div>
   </section>
 
-  <section class="container  section-top-ornament" id="l-staff">
+  <section class="container  c-sectionTop p-topOrnament" id="l-staff">
     <div class="row">
       <div class="col">
-        <h2 class="section-top-title"><span>STAFF</span></h2>
+        <h2 class="c-sectionTop__title c-ornament__title"><span>STAFF</span></h2>
       </div>
     </div>
 
