--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
 
     <div class="row">
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff1.jpg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff2.jpeg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff3.jpeg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff4.jpg" alt="">
           </div>
@@ -101,28 +101,28 @@
 
     <div class="row">
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff5.jpg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff6.jpg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff2.jpeg" alt="">
           </div>
         </a>
       </div>
       <div class="col-lg-3 col-6">
-        <a href="" class="panel panel-hover ">
+        <a href="" class="c-panel c-panel-hover ">
           <div class="panel-body">
             <img src="./images/staff1.jpg" alt="">
           </div>
